<?xml version="1.0" encoding="utf-8"?>
<resources>

    
    <string name="app_name">Quicker</string>
    <string name="et_account_hint">学号或手机号</string>
    <string name="et_password_hint">密码</string>
    <string name="register">新用户</string>
    <string name="login">登入</string>
    <string name="forget_password">忘记密码?</string>
    <string name="tv_country">中国+86</string>
    <string name="et_stuID_hint">请输入学号</string>
    <string name="et_phoneNumber_hint">请输入要绑定的手机号码</string>
    <string name="btn_next">下一步</string>
    <string name="tv_xieyi">我已阅读本产品声明</string>
    <string name="tv_tips_password">密码由6~16位数字,字母或符号组成,不能是9位以下的纯数字</string>
    <string name="tv_tips_passwordagain">请再次输入密码，以确认无误</string>
    <string name="tv_tips_email">请预留邮箱，以修改绑定的手机号</string>
    <string name="et_email_hint">邮箱</string>
    <string name="register_complete">完成</string>
    <string name="tv_quicker">注册成功</string>
    <string name="register_success">进入Quicker</string>
    <string name="btn_notice">通知</string>
    <string name="btn_Announcement">公告</string>
    <string name="btn_class_situation">班级情况</string>
    <string name="btn_my_settings">我的设置</string>
    <string name="action_settings">Settings</string>
    <string name="btn_back">返回</string>
    <string name="tv_wait">登录Quicker中</string>
    
    <string name="hello_world">Hello world!</string>
     <string name="tltle_notice">通知</string>
     <string name="tltle_activity">活动</string>
     <string name="tltle_class">班级情况</string>
     <string name="notice1">表格填写</string>
     <string name="notice2">通知公告</string>
     <string name="notice3">我的提醒</string>
     <string name="activity1">我的关注</string>
     <string name="activity2">所有活动</string>
     <string name="activity3">部门组织</string>
     <string name="all_activity_hot">热度排序</string>
     <string name="all_activity_time">时间排序</string>
     <string name="class1">未提交</string>
     <string name="class2">已提交</string>
     <string name="class3">辅导员提醒</string>
     <string name="submit">提交</string>
     <string name="save">收藏</string>
</resources>
