<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff" >
     
    <include layout="@layout/layout_titlebar" /> 
    
    <LinearLayout 
        android:id="@+id/ll_stuID"
        android:layout_height="60dp"
        android:layout_width="match_parent"
        android:layout_margin="20dp"
        android:orientation="horizontal"
        android:background="@drawable/register_phone_bg">

        <EditText
            android:id="@+id/et_stuID"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="2dp"
            android:layout_marginTop="2dp"
            android:background="@android:color/white"
            android:hint="@string/et_stuID_hint"
            android:inputType="phone"
            android:padding="5dp" />

     </LinearLayout>
      
    <LinearLayout
        android:id="@+id/ll_phone"
        android:layout_height="60dp"
        android:layout_width="match_parent"
        android:layout_margin="20dp"
        android:orientation="horizontal"
        android:background="@drawable/register_phone_bg">
        <TextView 
            android:layout_height="60dp"
            android:layout_width="65dp"
            android:gravity="center"
            android:text="@string/tv_country"
            android:textColor="@color/blue"
            android:textSize="16sp"/>
        <View 
            android:layout_height="match_parent"
            android:layout_width="1dp"
            android:background="@color/devide_line"/>
        <EditText 
            android:id="@+id/et_phoneNumber"
            android:layout_height="56dp"
            android:layout_width="match_parent"
            android:layout_marginRight="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:hint="@string/et_phoneNumber_hint"
            android:background="@android:color/white"
            android:inputType="phone"
            android:padding="5dp"/>
    </LinearLayout>
    
    <Button 
        android:id="@+id/btn_next"
        android:layout_height="60dp"
        android:layout_width="match_parent"
        android:layout_margin="20dp"
        android:text="@string/btn_next"
        android:textSize="18sp"
        android:background="@drawable/acm_inputbox"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@+id/ck_agreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/checkbox"
            android:button="@null"
            android:checked="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:text="@string/tv_xieyi"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>
